--- a/parts/client/post.jade
+++ b/parts/client/post.jade
@@ -71,7 +71,7 @@ template(name='post_edit')
                     +array_edit key='tags' label='tags' direct=true
                     // +raw_edit key='raw' label='raw' direct=true
                     +boolean_edit key='private' label='private' direct=true
-                    // +text_edit key='group' label='group' direct=true
+                    +text_edit key='group' label='group' direct=true
                     
                 .twelve.wide.column.scrolling
                     +boolean_edit key='has_title' icon='text' label='title'
