--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -451,9 +451,9 @@ template(name='user_debit_segment')
         .header
             strong #{amount}pt
             | to 
-            if recipient.profile_image_id
-                img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-            |#{recipient.shortname}
+            if target.profile_image_id
+                img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+            |#{target.shortname}
         small #{when}
         div
         |#{description}
