--- a/parts/inbox.jade
+++ b/parts/inbox.jade
@@ -15,10 +15,10 @@ template(name='inbox')
                 .ui.list.medscroll
                     each my_sent_messages
                         .item
-                            img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=100 width=200}}" class=currentUser.invert_class)
+                            img.ui.avatar.image(src="{{c.url target.profile_image_id height=100 width=200}}" class=currentUser.invert_class)
                             .content
                                 .header
-                                    |#{when} to #{recipient.name} #{target.name} #{to.name}
+                                    |#{when} to #{target.name} #{target.name} #{to.name}
                                 |#{description} #{body}
                                 a(href="/message/#{_id}/view")
                                    |view 
