--- a/parts/profile/user_sent.jade
+++ b/parts/profile/user_sent.jade
@@ -18,9 +18,9 @@ template(name='user_sent')
                     .inline.header
                         strong #{amount}pt
                         | to 
-                        if recipient.profile_image_id
-                            img.ui.avatar.image(src="{{c.url recipient.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
-                        |#{recipient.shortname}
+                        if target.profile_image_id
+                            img.ui.avatar.image(src="{{c.url target.profile_image_id height=200 width=200 gravity='face' crop='fill'}}")
+                        |#{target.shortname}
                     strong #{price}
                     small #{when}
                     // div
