--- a/parts/inbox.jade
+++ b/parts/inbox.jade
@@ -52,4 +52,4 @@ template(name='toggle_view_icon')
     if is_read
         i.eye.circular.link.grey.icon.mark_unread(title='mark unread')
     else
-        i.eye.circular.link.large.icon.mark_read(title='mark read')
+        i.eye.circular.link.large.icon.mark_viewed(title='mark read')
